Fix headers to be centered even on small screens

--- a/web/static/apps/wos/wos.css
+++ b/web/static/apps/wos/wos.css
@@ -1,8 +1,5 @@
 #title {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-items: center;
+  text-align: center;
   font-size: 48px;
   text-decoration: underline;
 }
